--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/jl_sloth_artist/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://twitter.com/jl_sloth_artist" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="facebook.com/jasminliart" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://facebook.com/jasminliart" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="mailto:jasminliart@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -153,7 +153,7 @@
 							<ul class="icons">
 								<li><a href="https://www.instagram.com/jl_sloth_artist/" class="icon brands fa-instagram" style="font-size:48px"><span class="label">Instagram</span></a></li>
 								<li><a href="https://twitter.com/jl_sloth_artist" class="icon  brands  fa-twitter" style="font-size:48px" ><span class="label">Twitter</span></a></li>
-								<li><a href="facebook.com/jasminliart" class="icon brands fa-facebook-f" style="font-size:48px"><span class="label">Facebook</span></a></li>
+								<li><a href="https://facebook.com/jasminliart" class="icon brands fa-facebook-f" style="font-size:48px"><span class="label">Facebook</span></a></li>
 								<li><a href="mailto:jasminliart@gmail.com" class="icon solid fa-envelope" style="font-size:48px"><span class="label">Email</span></a></li>
 							</ul>
 						</div>
