--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Jasmin</h1>
-							<p>Doodler</p>
+							<p>I Doodle A Lot</p>
 						</div>
 
 					<!-- Nav -->
@@ -70,60 +70,78 @@
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
 						<div class="container">
-
 							<header>
 								<h2>My Doodles</h2>
 							</header>
-
 							<p>Here are some of my works!</p>
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/Th79iR9UvGI" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="images/3_washhands.jpg" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="images/pic02-org.jpg" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>My books! (to date)</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="images/pic03-org.jpg" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Some of my old art…</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="images/pic08-org.jpg" class="image fit"><img src="images/pic08.jpg" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Tape some washi tapes!</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="images/pic04-org.jpg" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Newer but still old art...</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="images/pic05-org.jpg" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>A sneak peak in my book!</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="images/pic09-org.jpg" class="image fit"><img src="images/pic09.jpg" alt="" /></a>
+										<header>
+											<h3>Zentangles to de-stress</h3>
+										</header>
+									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="images/pic06-org.jpg" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<header>
+											<h3>Art journaling!</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="images/pic07-org.jpg" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<header>
+											<h3>More stuff from my book...</h3>
+										</header>		
+									</article>
+									<article class="item">
+										<a href="images/pic10-org.jpg" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+										<header>
+											<h3>My newest book!  </h3>
 										</header>
 									</article>
 								</div>
 							</div>
-
 						</div>
+						<p></p>
+						<iframe width="420" height="280" src="https://www.youtube.com/embed/Th79iR9UvGI" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<p>Video for my book</p>
+						<p></p>
+						
 					</section>
 
 				<!-- About Me -->
@@ -134,10 +152,9 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/pic-about.jpg" alt="" /></a>
 
-							<p> I'm Jasmin, known as the art girl who doodles during class. 
-								 </p>
+							<p> I'm Jasmin and I love doodling! </p>
 
 						</div>
 					</section>
