--- a/shop/index.html
+++ b/shop/index.html
@@ -1,70 +1,8 @@
 <html>
   <head>
     <title>Book Shop</title>
+    <link rel="stylesheet" type="text/css" href="bookShelf.css">
   </head>
-  <style>
-  
-bookShelf {
-  background-color:tan;
-  display:inline-block;
-}
-
-bookShelf bookContainer img {
-  width:100%;
-}
-
-bookShelf bookContainer{    
-    width: 180px; /*328 co je 1/3 - 20margin left*/
-    line-height: 5px;
-    margin:20px;
-    padding:0px;
-    display:inline-block;
-    position:relative;
-}
-
-bookShelf bookContainer:hover overlay {
-   width:100%;
-    height:100%;
-    position:absolute;
-    background-color:#000;
-    opacity:0.5;  
-}
-
-bookShelf bookContainer a {
-  transition: all 0.2s linear;
-  width:90%;
-  left:5%;
-  border-radius: 25px;
-  text-align:center;
-  position:absolute;
-  padding-top:20px;
-  padding-bottom:20px;
-}
-
-
-bookShelf bookContainer:hover .middle {
-  top:50%;
-}
-
-bookShelf bookContainer a {
-  display:none;
-}
-
-bookShelf bookContainer:hover a {
-  display:block;
-}
-
-.amazon {
-    color:white;
-    background-color:#F19E38;
-}
-
-.amazon:hover {
-    background-color:white;
-    color:#F19E38;
-}
-
-  </style>
   <body>
   
     <bookShelf>
