--- a/freebie/index.html
+++ b/freebie/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>Enjoy your freebies</h1>
+<h1>Get your freebies here!</h1>
 
-<p>Printable coloring page for <a href="./freebie.pdf">download</a></p>
+<h3>Printable coloring page for <a href="./freebie.pdf">download</a></h3>
 
 </body>
 </html>
