--- a/shop/index.html
+++ b/shop/index.html
@@ -1,10 +1,28 @@
 <html>
   <head>
-    <title>Book Shop</title>
+    <title>Welcome to my shop</title>
     <link rel="stylesheet" type="text/css" href="bookShelf.css">
   </head>
   <body>
-  
+    <h1>Paperback Books</h1>
+    <bookShelf>
+      <bookContainer>
+	<overlay></overlay>
+	<img src="https://images-na.ssl-images-amazon.com/images/I/413On0P4CaL._SX331_BO1,204,203,200_.jpg" />
+	<a class="middle amazon" href="https://www.amazon.com/gp/product/B087L4R4JK">Amazon.com</a>
+      </bookContainer>
+      <bookContainer>
+      	<overlay></overlay>
+      	<img src="https://images-na.ssl-images-amazon.com/images/I/41TGiNiWFVL._SX331_BO1,204,203,200_.jpg" />
+      	<a class="middle amazon" href="https://www.amazon.com/gp/product/B08DSS3FKR">Amazon.com</a>
+      </bookContainer>
+      <bookContainer>
+      	<overlay></overlay>
+      	<img src="https://images-na.ssl-images-amazon.com/images/I/41TGiNiWFVL._SX331_BO1,204,203,200_.jpg" />
+      	<a class="middle amazon" href="#">Amazon.com</a>
+      </bookContainer>
+    </bookShelf>
+    <h1>Kindle Ebooks</h1>
     <bookShelf>
       <bookContainer>
 	<overlay></overlay>
