--- a/freebie/index.html
+++ b/freebie/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
 <html>
 <body>
 
 <h1>Get your freebies here!</h1>
-
-<h3>Printable coloring page for <a href="./freebie.pdf">download</a></h3>
-
+<h3>Click on the image to download 
+<a href="./freebie.pdf"><img src="./freebie_thumbnail.jpg" alt="freebie image"></a></h3>
 </body>
 </html>
