--- a/shop/index.html
+++ b/shop/index.html
@@ -18,8 +18,28 @@
       </bookContainer>
       <bookContainer>
       	<overlay></overlay>
-      	<img src="https://images-na.ssl-images-amazon.com/images/I/41TGiNiWFVL._SX331_BO1,204,203,200_.jpg" />
-      	<a class="middle amazon" href="#">Amazon.com</a>
+      	<img src="https://images-na.ssl-images-amazon.com/images/I/51jhMpvZSlL._SX331_BO1,204,203,200_.jpg" />
+      	<a class="middle amazon" href="https://www.amazon.com/gp/product/B08BWCL43D">Amazon.com</a>
+      </bookContainer>
+      <bookContainer>
+      	<overlay></overlay>
+      	<img src="https://images-na.ssl-images-amazon.com/images/I/41iyG3eIPDL._SX398_BO1,204,203,200_.jpg" />
+      	<a class="middle amazon" href="https://www.amazon.com/gp/product/B08BWGWH6C">Amazon.com</a>
+      </bookContainer>
+      <bookContainer>
+      	<overlay></overlay>
+      	<img src="https://images-na.ssl-images-amazon.com/images/I/41iyG3eIPDL._SX398_BO1,204,203,200_.jpg" />
+      	<a class="middle amazon" href="https://www.amazon.com/gp/product/B08BW8KXJ2">Amazon.com</a>
+      </bookContainer>
+      <bookContainer>
+      	<overlay></overlay>
+      	<img src="https://images-na.ssl-images-amazon.com/images/I/51iWahAfx4L._SX311_BO1,204,203,200_.jpg" />
+      	<a class="middle amazon" href="https://www.amazon.com/gp/product/B08BDVMZ61">Amazon.com</a>
+      </bookContainer>
+      <bookContainer>
+      	<overlay></overlay>
+      	<img src="https://images-na.ssl-images-amazon.com/images/I/41CY2Z7nARL._SX331_BO1,204,203,200_.jpg" />
+      	<a class="middle amazon" href="https://www.amazon.com/gp/product/B087S9NWG6">Amazon.com</a>
       </bookContainer>
     </bookShelf>
     <h1>Kindle Ebooks</h1>
