--- a/shop/index.html
+++ b/shop/index.html
@@ -10,7 +10,7 @@
         <img src="https://images-na.ssl-images-amazon.com/images/I/413On0P4CaL._SX331_BO1,204,203,200_.jpg" />
         <a class="middle amazon" href="https://www.amazon.com/gp/product/B087L4R4JK">Amazon.com</a>
       </bookContainer>
-      </bookContainer>
+      <bookContainer>
         <img src="https://images-na.ssl-images-amazon.com/images/I/41CY2Z7nARL._SX331_BO1,204,203,200_.jpg" />
         <a class="middle amazon" href="https://www.amazon.com/gp/product/B087S9NWG6">Amazon.com</a>
       </bookContainer>
@@ -27,26 +27,32 @@
         <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BDVMZ61">Amazon.com</a>
       </bookContainer>
       <bookContainer>
-      <bookContainer>
         <img src="https://images-na.ssl-images-amazon.com/images/I/41njBQKpMtL._SX398_BO1,204,203,200_.jpg" />
         <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BWGWH6C">Amazon.com</a>
       </bookContainer>
       <bookContainer>
         <img src="https://images-na.ssl-images-amazon.com/images/I/41iyG3eIPDL._SX398_BO1,204,203,200_.jpg" />
         <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BW8KXJ2">Amazon.com</a>
+      </bookContainer>
 
     </bookShelf>
-    <h1>Kindle Ebooks</h1>
+    <h1>Kindle eBooks</h1>
     <bookShelf>
       <bookContainer>
-        <overlay></overlay>
         <img src="https://m.media-amazon.com/images/I/51N2Qw0D+lL._SY346_.jpg" />
-        <a class="middle amazon" href="https://www.amazon.com/gp/product/B087L4R4JK">Amazon.com</a>
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B087PNLGZ5">Amazon.com</a>
       </bookContainer>
       <bookContainer>
-        <overlay></overlay>
-        <foo><img src="https://images.gr-assets.com/books/1427674907l/22609329.jpg" /></foo>
-        <a class="middle amazon" href="#">Amazon</a>
+        <img src="https://m.media-amazon.com/images/I/51egz-NqczL.jpg" />
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B087TPRP6T">Amazon.com</a>
+      </bookContainer>
+      <bookContainer>
+        <img src="https://m.media-amazon.com/images/I/41EB+lVNVPL.jpg" />
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08DM61B7N">Amazon.com</a>
+      </bookContainer>
+      <bookContainer>
+        <img src="https://m.media-amazon.com/images/I/512i0JgJH2L._SY346_.jpg" />
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BZ16LJB">Amazon.com</a>
       </bookContainer>
     </bookShelf>
   </body>
