--- a/shop/index.html
+++ b/shop/index.html
@@ -8,31 +8,31 @@
     <bookShelf>
       <bookContainer>
         <img src="https://images-na.ssl-images-amazon.com/images/I/413On0P4CaL._SX331_BO1,204,203,200_.jpg" />
-        <a class="middle amazon" href="https://www.amazon.com/gp/product/B087L4R4JK">Amazon.com</a>
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B087L4R4JK">Buy on Amazon</a>
       </bookContainer>
       <bookContainer>
         <img src="https://images-na.ssl-images-amazon.com/images/I/41CY2Z7nARL._SX331_BO1,204,203,200_.jpg" />
-        <a class="middle amazon" href="https://www.amazon.com/gp/product/B087S9NWG6">Amazon.com</a>
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B087S9NWG6">Buy on Amazon</a>
       </bookContainer>
       <bookContainer>
         <img src="https://images-na.ssl-images-amazon.com/images/I/41TGiNiWFVL._SX331_BO1,204,203,200_.jpg" />
-        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08DSS3FKR">Amazon.com</a>
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08DSS3FKR">Buy on Amazon</a>
       </bookContainer>
       <bookContainer>
         <img src="https://images-na.ssl-images-amazon.com/images/I/51jhMpvZSlL._SX331_BO1,204,203,200_.jpg" />
-        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BWCL43D">Amazon.com</a>
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BWCL43D">Buy on Amazon</a>
       </bookContainer>
       <bookContainer>
         <img src="https://images-na.ssl-images-amazon.com/images/I/51iWahAfx4L._SX311_BO1,204,203,200_.jpg" />
-        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BDVMZ61">Amazon.com</a>
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BDVMZ61">Buy on Amazon</a>
       </bookContainer>
       <bookContainer>
         <img src="https://images-na.ssl-images-amazon.com/images/I/41njBQKpMtL._SX398_BO1,204,203,200_.jpg" />
-        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BWGWH6C">Amazon.com</a>
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BWGWH6C">Buy on Amazon</a>
       </bookContainer>
       <bookContainer>
         <img src="https://images-na.ssl-images-amazon.com/images/I/41iyG3eIPDL._SX398_BO1,204,203,200_.jpg" />
-        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BW8KXJ2">Amazon.com</a>
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BW8KXJ2">Buy on Amazon</a>
       </bookContainer>
 
     </bookShelf>
@@ -40,19 +40,19 @@
     <bookShelf>
       <bookContainer>
         <img src="https://m.media-amazon.com/images/I/51N2Qw0D+lL._SY346_.jpg" />
-        <a class="middle amazon" href="https://www.amazon.com/gp/product/B087PNLGZ5">Amazon.com</a>
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B087PNLGZ5">Buy on Amazon</a>
       </bookContainer>
       <bookContainer>
         <img src="https://m.media-amazon.com/images/I/51egz-NqczL.jpg" />
-        <a class="middle amazon" href="https://www.amazon.com/gp/product/B087TPRP6T">Amazon.com</a>
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B087TPRP6T">Buy on Amazon</a>
       </bookContainer>
       <bookContainer>
         <img src="https://m.media-amazon.com/images/I/41EB+lVNVPL.jpg" />
-        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08DM61B7N">Amazon.com</a>
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08DM61B7N">Buy on Amazon</a>
       </bookContainer>
       <bookContainer>
         <img src="https://m.media-amazon.com/images/I/512i0JgJH2L._SY346_.jpg" />
-        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BZ16LJB">Amazon.com</a>
+        <a class="middle amazon" href="https://www.amazon.com/gp/product/B08BZ16LJB">Buy on Amazon</a>
       </bookContainer>
     </bookShelf>
   </body>
