--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
 						<iframe width="420" height="280" src="https://www.youtube.com/embed/Th79iR9UvGI" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						<p>Video for my book</p>
 						<p></p>
+						<h2> Click <a href="./shop/index.html">here</a> to shop my books</p>
+						<!--
 						<h2>My Books at-a-glance</h2>
 						<p></p>
 						<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -211,6 +213,8 @@
 								</div>
 							</div>
 						</div>
+
+						--->
 						<p></p>
 					</section>
 
@@ -237,7 +241,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p> Feel free to reach out to me! </p>
+							<p> Don't forget to checkout my freebies <a href="./freebie/index.html">here</a></p>
 							<ul class="icons">
 								<li><a href="https://www.instagram.com/jl_sloth_artist/" class="icon brands fa-instagram" style="font-size:48px"><span class="label">Instagram</span></a></li>
 								<li><a href="https://twitter.com/jl_sloth_artist" class="icon  brands  fa-twitter" style="font-size:48px" ><span class="label">Twitter</span></a></li>
