--- a/index.html
+++ b/index.html
@@ -241,13 +241,28 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p> Don't forget to checkout my freebies <a href="./freebie/index.html">here</a></p>
 							<ul class="icons">
 								<li><a href="https://www.instagram.com/jl_sloth_artist/" class="icon brands fa-instagram" style="font-size:48px"><span class="label">Instagram</span></a></li>
 								<li><a href="https://twitter.com/jl_sloth_artist" class="icon  brands  fa-twitter" style="font-size:48px" ><span class="label">Twitter</span></a></li>
 								<li><a href="https://facebook.com/jasminliart" class="icon brands fa-facebook-f" style="font-size:48px"><span class="label">Facebook</span></a></li>
 								<li><a href="mailto:jasminliart@gmail.com" class="icon solid fa-envelope" style="font-size:48px"><span class="label">Email</span></a></li>
 							</ul>
+
+							<p> Don't forget to checkout my freebies <a href="./freebie/index.html">here</a></p>
+							<!-- Begin Mailchimp Signup Form -->
+							<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                            <style type="text/css">#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}</style>
+							<div id="mc_embed_signup">
+								<form action="https://github.us8.list-manage.com/subscribe/post?u=657c8d940f87d3227539a062d&amp;id=5bb50c3d93" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+									<div id="mc_embed_signup_scroll">
+									<label for="mce-EMAIL"><h3 style="color:#fff";>Keep in touch</h3> </label>
+									<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+									<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+									<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_657c8d940f87d3227539a062d_5bb50c3d93" tabindex="-1" value=""></div>
+									<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+									</div>
+								</form>
+							</div>
 						</div>
 					</section>
 
