--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="assets/js/script.js"></script>
+		<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/657c8d940f87d3227539a062d/fe4fa6ca83723fbf9dfdb3dbc.js");</script>
 	</head>
 	<body class="is-preload">
 
@@ -255,7 +256,7 @@
 							<div id="mc_embed_signup">
 								<form action="https://github.us8.list-manage.com/subscribe/post?u=657c8d940f87d3227539a062d&amp;id=5bb50c3d93" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 									<div id="mc_embed_signup_scroll">
-									<label for="mce-EMAIL"><h3 style="color:#fff";>Keep in touch</h3> </label>
+									<label for="mce-EMAIL"><h3 style="color:#666";>   </h3> </label>
 									<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
 									<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 									<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_657c8d940f87d3227539a062d_5bb50c3d93" tabindex="-1" value=""></div>
